src/test/deca/syntax/invalid/classes/classDansUneClasse.deca
class myClass1 {
      class myClass2 {
      }
}